[gd_scene load_steps=2 format=3 uid="uid://bapcm0dk2sp5e"]

[ext_resource type="Script" path="res://Screens/Battle/map/TileObject.gd" id="1_yalya"]

[node name="TileObject" type="Node2D"]
script = ExtResource("1_yalya")

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0)

[connection signal="color_changed" from="." to="." method="_on_color_changed"]
[connection signal="world_changed" from="." to="." method="_on_world_changed"]
